// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Photos snapshot Should match  1`] = `
<section
  className="photo"
>
  <div
    className="photo__title"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root title__icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 16V4c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2zm-11-4l2.03 2.71L16 11l4 5H8l3-4zM2 6v14c0 1.1.9 2 2 2h14v-2H4V6H2z"
      />
    </svg>
    <h1
      className="title__text"
    >
      Photos and videos
    </h1>
  </div>
  <div
    className="photo__main"
  >
    <img
      alt={0}
      className="main__item"
      onClick={[Function]}
      src="testPhoto.com"
    />
    <img
      alt={1}
      className="main__item"
      onClick={[Function]}
      src="mockPhoto.com"
    />
  </div>
</section>
`;

exports[`Photos snapshot Should match  2`] = `
<section
  className="photo"
>
  <div
    className="photo__title"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root title__icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 16V4c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2zm-11-4l2.03 2.71L16 11l4 5H8l3-4zM2 6v14c0 1.1.9 2 2 2h14v-2H4V6H2z"
      />
    </svg>
    <h1
      className="title__text"
    >
      Photos and videos
    </h1>
  </div>
  <div
    className="photo__show"
  >
    <div
      className="show__main"
    >
      <div
        className="main__left"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root left__back"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root arrow"
          focusable="false"
          id="left-arrow"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M11.67 3.87L9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
          />
        </svg>
      </div>
      <img
        alt="zoom"
        className="main__photo"
        src="mockPhoto.com"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root arrow"
        focusable="false"
        id="right-arrow"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
        />
      </svg>
    </div>
    <div
      className="show__footer"
    >
      <img
        alt={0}
        className="footer__item "
        id="photo$i"
        onClick={[Function]}
        src="testPhoto.com"
      />
      <img
        alt={1}
        className="footer__item color"
        id="photo$i"
        onClick={[Function]}
        src="mockPhoto.com"
      />
    </div>
  </div>
</section>
`;
